fixed page size on small devices

--- a/css/style.scss
+++ b/css/style.scss
@@ -8,6 +8,7 @@ body {
 header {
 	width: 100%;
 	height: 100%;
+	min-height: 600px;
 }
 
 #background {
@@ -16,6 +17,7 @@ header {
 	width: 100%;
 	z-index: -999;
 	height: 100%;
+	min-height: 600px;
 	filter: blur(1spx);
 	-webkit-filter: blur(1px);
 	-moz-filter: blur(1px);
